infra/application/frontend-prod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: registry.digitalocean.com/wallfair/frontend_k8s
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1000m 
          requests:
            cpu: 400m
            memory: 1024Mi
        name: frontend
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-main
  namespace: staging
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
