infra/application/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # reference production issuer
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    
spec:
  tls:
    - hosts:
      - frontend-k8s.wallfair.io
      - staging.wallfair.io
      - main.wallfair.io
      secretName: frontend-staging-cert-secret
  rules:
  - host: frontend-k8s.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-main
              port:
                number: 80
  - host: staging.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-main
              port:
                number: 80
  - host: main.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-main
              port:
                number: 80
